# Flaxmor

./: .gitignore  README.md  SYSTEM_PROMPT.md  WORKLOG.md  assignment 2.txt  docker-compose.yml  env.example
middleware/: Dockerfile  pyproject.toml
middleware/app/: config.py  injection.py  logging_config.py  main.py  system_prompt.py  upstream.py
middleware/app/routes/: chat.py  health.py  models.py
middleware/tests/: conftest.py  test_chat_route.py  test_health.py  test_injection.py  test_models.py  test_upstream_errors.py
